--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -150,7 +150,7 @@
                             <ul class="nav" role="tablist">
                                 <li>
                                     <a class="active" data-toggle="tab" href="#Sellers" role="tab" aria-controls="Sellers" aria-selected="true"> 
-                                        Khuyến mãi
+                                        Bán chạy
                                     </a>
                                 </li>
                                 <li>
@@ -171,15 +171,15 @@
                     <div class="tab-pane fade show active" id="Sellers" role="tabpanel">
                         <div class="row">
                             <div class="product_carousel product_column5 owl-carousel">
-                               <div class="col-lg-3">
+                               <div *ngFor="let sc of spchay" class="col-lg-3">
                                    <div class="product_items">
                                         <article class="single_product">
                                             <figure>
                                                 <div class="product_thumb">
-                                                    <a class="primary_img" href="product-details.html"><img src="assets/img/product/product1.jpg" alt=""></a>
+                                                    <a class="primary_img" style="height: 500px;width: 500px;" href="product-details.html"><img src="assets/img/product/{{sc.anh}}" alt=""></a>
                                                     <a class="secondary_img" href="product-details.html"><img src="assets/img/product/product2.jpg" alt=""></a>
                                                     <div class="label_product">
-                                                        <span class="label_sale">-56%</span>
+                                                        <span class="label_sale">Emarket</span>
                                                     </div>
                                                     <div class="quick_button">
                                                         <a href="#" data-toggle="modal" data-target="#modal_box"  title="quick view"><i class="icon-eye"></i></a>
@@ -187,8 +187,8 @@
                                                 </div>
                                                 <div class="product_content">
                                                     <div class="product_content_inner">
-                                                        <p class="manufacture_product"><a href="#">Parts</a></p>
-                                                        <h4 class="product_name"><a href="product-details.html">Nunc Neque Eros</a></h4>
+                                                        <p class="manufacture_product" style="color: blue;"><a href="#">{{sc.danhmuc.tenLoai}}</a></p>
+                                                        <h4 class="product_name"><a href="shop/chi-tiet/{{sc.link}}">{{sc.tenSanPham}}</a></h4>
                                                         <div class="product_rating">
                                                            <ul>
                                                                <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
@@ -199,13 +199,13 @@
                                                            </ul>
                                                         </div>
                                                         <div class="price_box"> 
-                                                            <span class="old_price">$320.00</span> 
-                                                            <span class="current_price">$120.00</span>
+                                                            <!-- <span class="old_price">$320.00</span>  -->
+                                                            <span class="current_price">{{sc.giahientai.gia|currency:'VND'}}</span>
                                                         </div>
                                                     </div> 
                                                     <div class="action_links">
                                                          <ul>
-                                                            <li class="add_to_cart"><a href="cart.html" title="Add to cart">Add to cart</a></li>
+                                                            <li class="add_to_cart"><a (click)="addToCart(sc)" title="Thêm vào giỏ hàng">Thêm vào giỏ hàng</a></li>
                                                             <li class="wishlist"><a href="wishlist.html"  title="Add to Wishlist"><i class="icon-heart"></i></a></li>
                                                             <li class="compare"><a href="compare.html" title="Add to Compare"><i class="icon-rotate-cw"></i></a></li>  
                                                         </ul>
@@ -213,47 +213,6 @@
                                                 </div>
                                             </figure>
                                         </article>
-                                        <article class="single_product">
-                                            <figure>
-                                                <div class="product_thumb">
-                                                    <a class="primary_img" href="product-details.html"><img src="assets/img/product/product1.jpg" alt=""></a>
-                                                    <a class="secondary_img" href="product-details.html"><img src="assets/img/product/product2.jpg" alt=""></a>
-                                                    <div class="label_product">
-                                                        <span class="label_new">new</span>
-                                                    </div>
-                                                    <div class="quick_button">
-                                                        <a href="#" data-toggle="modal" data-target="#modal_box"  title="quick view"><i class="icon-eye"></i></a>
-                                                    </div>
-                                                </div>
-                                                <div class="product_content">
-                                                    <div class="product_content_inner">
-                                                        <p class="manufacture_product"><a href="#">Parts</a></p>
-                                                        <h4 class="product_name"><a href="product-details.html">Mauris Vel Tellus</a></h4>
-                                                        <div class="product_rating">
-                                                           <ul>
-                                                               <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
-                                                               <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
-                                                               <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
-                                                               <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
-                                                               <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
-                                                           </ul>
-                                                        </div>
-                                                        <div class="price_box"> 
-                                                            <span class="old_price">$420.00</span> 
-                                                            <span class="current_price">$180.00</span>
-                                                        </div>
-                                                    </div> 
-                                                    <div class="action_links">
-                                                        <ul>
-                                                            <li class="add_to_cart"><a href="cart.html" title="Add to cart">Add to cart</a></li>
-                                                            <li class="wishlist"><a href="wishlist.html"  title="Add to Wishlist"><i class="icon-heart"></i></a></li>
-                                                            <li class="compare"><a href="compare.html" title="Add to Compare"><i class="icon-rotate-cw"></i></a></li>  
-                                                        </ul>
-                                                    </div> 
-                                                </div>
-                                            </figure>
-                                        </article>
-                                        
                                     </div>
                                </div>
                             </div> 
