--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
                 <div class="col-12">
                     <div class="tags_content">
                         <ul>
-                            <li><span>Top Tags:</span></li>
+                            <li><span>Từ khóa hot:</span></li>
                             <li><a href="#">Wheels & Tires</a></li>
                             <li><a href="#">Lighting & lamp</a></li>
                             <li><a href="#">Body Parts</a></li>
@@ -28,40 +28,38 @@
     <!--slider area start-->
     <section class="slider_section mb-80">
         <div class="slider_area slider_carousel owl-carousel">
-            <div class="single_slider d-flex align-items-center" data-bgimg="assets/img/slider/slider1.jpg">
+            <div class="single_slider d-flex align-items-center" data-bgimg="assets/img/slider/1200x628.jpg">
                <div class="container">
                    <div class="row">
                        <div class="col-12">
                            <div class="slider_content">
-                                <h1>Big sale off <span>Accessories Fidanza</span></h1>
-                                <p>Exclusive Offer -30% Off This Week</p>  
-                                <a class="button" href="shop.html">shopping now <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+                                
                             </div>
                        </div>
                    </div>
                </div> 
             </div>
-            <div class="single_slider d-flex align-items-center" data-bgimg="assets/img/slider/slider2.jpg">
+            <div class="single_slider d-flex align-items-center" data-bgimg="assets/img/slider/Artboard-2.jpg">
                 <div class="container">
                    <div class="row">
                        <div class="col-12">
                            <div class="slider_content center">
-                                <h1>Accessories  <span>all kinds of tractor trailer</span></h1>
+                                <!-- <h1>Accessories  <span>all kinds of tractor trailer</span></h1>
                                 <p>Exclusive Offer -30% Off This Week</p>  
-                                <a class="button" href="shop.html">shopping now <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+                                <a class="button" href="shop.html">shopping now <i class="fa fa-angle-double-right" aria-hidden="true"></i></a> -->
                             </div>
                        </div>
                    </div>
                </div>
             </div>
-            <div class="single_slider d-flex align-items-center" data-bgimg="assets/img/slider/slider3.jpg">
+            <div class="single_slider d-flex align-items-center" data-bgimg="assets/img/slider/meo_kinh_doanh_dem_lai_loi_nhuan_khung_tren_shopee_1.png">
                 <div class="container">
                    <div class="row">
                        <div class="col-12">
                            <div class="slider_content">
-                                <h1>High-end <span>New car interior</span> </h1>
+                                <!-- <h1>High-end <span>New car interior</span> </h1>
                                 <p>Exclusive Offer -20% Off This Week</p>  
-                                <a class="button" href="shop.html">shopping now <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+                                <a class="button" href="shop.html">shopping now <i class="fa fa-angle-double-right" aria-hidden="true"></i></a> -->
                             </div>
                        </div>
                    </div>
@@ -176,8 +174,8 @@
                                         <article class="single_product">
                                             <figure>
                                                 <div class="product_thumb">
-                                                    <a class="primary_img" style="height: 500px;width: 500px;" href="product-details.html"><img src="assets/img/product/{{sc.anh}}" alt=""></a>
-                                                    <a class="secondary_img" href="product-details.html"><img src="assets/img/product/product2.jpg" alt=""></a>
+                                                    <a class="primary_img" style="height: 500px;width: 500px;" href="shop/chi-tiet/{{sc.link}}"><img src="assets/img/product/{{sc.anh}}" alt=""></a>
+                                                    <a class="secondary_img" href="shop/chi-tiet/{{sc.link}}"><img src="assets/img/product/product2.jpg" alt=""></a>
                                                     <div class="label_product">
                                                         <span class="label_sale">Emarket</span>
                                                     </div>
@@ -206,7 +204,7 @@
                                                     <div class="action_links">
                                                          <ul>
                                                             <li class="add_to_cart"><a (click)="addToCart(sc)" title="Thêm vào giỏ hàng">Thêm vào giỏ hàng</a></li>
-                                                            <li class="wishlist"><a href="wishlist.html"  title="Add to Wishlist"><i class="icon-heart"></i></a></li>
+                                                            <li class="wishlist"><a (click)="addToWishlist(sc)"  title="Thêm vào danh sách yêu thích"><i class="icon-heart"></i></a></li>
                                                             <li class="compare"><a href="compare.html" title="Add to Compare"><i class="icon-rotate-cw"></i></a></li>  
                                                         </ul>
                                                     </div>  
