--- a/src/app/sanpham/sanphamtheoloai1/sanphamtheoloai1.component.html
+++ b/src/app/sanpham/sanphamtheoloai1/sanphamtheoloai1.component.html
@@ -17,13 +17,13 @@
                         <button data-role="grid_3" type="button" class=" btn-grid-3" data-toggle="tooltip" title="3"></button>
                         <button data-role="grid_list" type="button"  class="btn-list" data-toggle="tooltip" title="List"></button>
                     </div>
-                    <div >
-                        <form >
-                            <select >
+                    <div class="form-group">
+                        <form class="" action="#">
+                            <select name="orderby" (change)="sortByPriceI(sptheoloai1)" class="btn btn-default" id="short">
 
-                                <option selected value="1">Sort by average rating</option>
-                                <option  value="2">Sort by popularity</option>
-                                <option value="3">Sort by newness</option>
+                                <option selected value="1">Giá Thấp đến cao</option>
+                                <option  value="2">Giá cao đến thấp</option>
+                                <option value="3"></option>
                                 <option value="4">Sort by price: low to high</option>
                                 <option value="5">Sort by price: high to low</option>
                                 <option value="6">Product Name: Z</option>
@@ -31,20 +31,21 @@
                         </form>
                     </div>
                     <div class="page_amount">
-                        <p>Có {{tongsl}} sản phẩm</p>
+                        <p>Có {{tongsl1}} sản phẩm</p>
                     </div>
                 </div>
                  <!--shop toolbar end-->
                  <div class="row shop_wrapper">
-                     <ng-container *ngFor="let sploai of sptheoloai">
+                     <ng-container *ngFor="let sploai of sptheoloai1">
                     <div class="col-lg-3 col-md-4 col-12 ">
                         <article class="single_product">
                             <figure>
                                 <div class="product_thumb">
-                                    <a class="primary_img"[routerlink]="['chi-tiet/',sploai.link]"><img src="assets/img/product/{{sploai.anh}}" alt=""></a>
-                                    <a class="secondary_img" href="product-details.html"><img src="assets/img/product/product2.jpg" alt=""></a>
+                                    <a class="primary_img" href="shop/chi-tiet/{{sploai.link}}"><img src="assets/img/product/{{sploai.anh}}" alt=""></a>
+                                    <a class="secondary_img" href="shop/chi-tiet/{{sploai.link}}"><img src="assets/img/product/product2.jpg" alt=""></a>
                                     <div class="label_product">
-                                        <span class="label_new">Emarket</span>
+                                        <span class="label_new" style="float:left;">Emarket</span>
+                                   
                                     </div>
                                     <div class="quick_button">
                                         <a href="#" data-toggle="modal" data-target="#modal_box"  title="quick view"><i class="icon-eye"></i></a>
@@ -52,7 +53,7 @@
                                 </div>
                                 <div class="product_content grid_content">
                                     <div class="product_content_inner">
-                                        <h4 class="product_name"><a [routerlink]="['chi-tiet/',sploai.link]">{{sploai.tenSanPham}}</a></h4>
+                                        <h4 class="product_name"><a href="shop/chi-tiet/{{sploai.link}}">{{sploai.tenSanPham}}</a></h4>
                                         <div class="product_rating">
                                            <ul>
                                                <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
@@ -63,14 +64,14 @@
                                            </ul>
                                         </div>
                                         <div class="price_box"> 
-                                            
+                                   
                                             <span class="current_price">{{sploai.giahientai.gia | currency:'VND':true:'1.0-2'}}</span>
                                         </div>
                                     </div>
                                     <div class="action_links">
                                          <ul>
                                             <li class="add_to_cart"><a (click)="addToCart(sploai)" title="Add to cart">Add to cart</a></li>
-                                            <li class="wishlist"><a (click)="addToWishlist(sploai)"  title="Add to Wishlist"><i class="icon-heart"></i></a></li>
+                                            <li class="wishlist"><a (click)="addToWishlist(sploai)"   title="Add to Wishlist"><i class="icon-heart"></i></a></li>
                                             <li class="compare"><a href="#" title="Add to Compare"><i class="icon-rotate-cw"></i></a></li> 
                                         </ul>
                                     </div> 
@@ -115,8 +116,9 @@
                 </div>
 
                 <div class="shop_toolbar t_bottom">
+                    <ngb-pagination [collectionSize]="tongsl1" [pageSize]="size" [(page)]="index" [maxSize]="10" [rotate]="true" (pageChange)="loadPage($event)"></ngb-pagination>
                     <div class="pagination">
-                        <ngb-pagination [collectionSize]="tongsl" [pageSize]="size" [(page)]="index" [maxSize]="10" [rotate]="true" (pageChange)="loadPage($event)"></ngb-pagination>
+
                     </div>
                 </div>
                 <!--shop toolbar end-->
