--- a/src/app/sanpham/sanphamtheoloai2/sanphamtheoloai2.component.html
+++ b/src/app/sanpham/sanphamtheoloai2/sanphamtheoloai2.component.html
@@ -71,7 +71,7 @@
                                     <div class="action_links">
                                          <ul>
                                             <li class="add_to_cart"><a (click)="addToCart(sploai)" title="Add to cart">Add to cart</a></li>
-                                            <li class="wishlist"><a href="wishlist.html"  title="Add to Wishlist"><i class="icon-heart"></i></a></li>
+                                            <li class="wishlist"><a (click)="addToWishlist(sploai)"   title="Add to Wishlist"><i class="icon-heart"></i></a></li>
                                             <li class="compare"><a href="#" title="Add to Compare"><i class="icon-rotate-cw"></i></a></li> 
                                         </ul>
                                     </div> 
