--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -75,9 +75,9 @@
            <div class="row">
                <div class="col-12">
                    <div class="welcome_title">
-                       <h3>WELCOME TO MAZLAY</h3>
-                       <h2>CUSTOM <span>SHOPPING STORE ONLINE</span></h2>
-                       <p>Designer Accessories. Locally Designed. Globally Crafted.</p>
+                       <h3>EMARKET</h3>
+                       <h2>SHOPPING<span> TIỆN LỢI HƠN BAO GIỜ HẾT</span></h2>
+                       <!-- <p>Designer Accessories. Locally Designed. Globally Crafted.</p> -->
                    </div>
                </div>
            </div>
@@ -85,21 +85,21 @@
                 <div class="col-lg-4 col-md-4">
                     <figure class="single_banner">
                         <div class="banner_thumb">
-                            <a href="shop.html"><img src="assets/img/bg/banner1.jpg" alt=""></a>
+                            <a href="shop.html"><img src="assets/img/slider/87cc5e2f2953bcc704292c3a4560ac35.png" alt=""></a>
                         </div>
                     </figure>
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <figure class="single_banner">
                         <div class="banner_thumb">
-                            <a href="shop.html"><img src="assets/img/bg/banner2.jpg" alt=""></a>
+                            <a href="shop.html"><img  src="assets/img/slider/575d9fe9266b054adea6d85d72b6ab5a.png" alt=""></a>
                         </div>
                     </figure>
                 </div>
                 <div class="col-lg-4 col-md-4">
                     <figure class="single_banner">
                         <div class="banner_thumb">
-                            <a href="shop.html"><img src="assets/img/bg/banner3.jpg" alt=""></a>
+                            <a href="shop.html"><img src="assets/img/slider/cd55095baa0072e65a0c454647fb6d42.png" alt=""></a>
                         </div>
                     </figure>
                 </div>
@@ -120,10 +120,10 @@
 <ng-container *ngFor="let dmuc of dmuccha">
                 <div class="single_categories_product">
                     <div class="categories_product_thumb">
-                        <a [routerLink]="['shop',dmuc.link]"><img src="assets/img/cates/{{dmuc.anh}}"  alt="{{dmuc.tenLoai}}" style="height:120px;width: 120px;"></a>
+                        <a [routerLink]="['shop/danh-muc',dmuc.link]"><img src="assets/img/cates/{{dmuc.anh}}"  alt="{{dmuc.tenLoai}}" style="height:120px;width: 120px;"></a>
                     </div>
                     <div class="categories_product_content">
-                        <h4><a [routerLink]="['shop',dmuc.link]"> {{dmuc.tenLoai}}</a></h4>
+                        <h4><a [routerLink]="['shop/danh-muc',dmuc.link]"> {{dmuc.tenLoai}}</a></h4>
                     </div>
                 </div>
 </ng-container>
@@ -410,14 +410,14 @@
                     <div class="col-lg-6 col-md-6">
                         <figure class="single_banner">
                             <div class="banner_thumb">
-                                <a href="shop.html"><img src="assets/img/bg/banner4.jpg" alt=""></a>
+                                <a href="shop.html"><img src="assets/img/slider/zkig08wkxzmoq.jpg" alt=""></a>
                             </div>
                         </figure>
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <figure class="single_banner">
                             <div class="banner_thumb">
-                                <a href="shop.html"><img src="assets/img/bg/banner5.jpg" alt=""></a>
+                                <a href="shop.html"><img src="assets/img/slider/banner-shopee-sieu-sale.png" alt=""></a>
                             </div>
                         </figure>
                     </div>
@@ -427,7 +427,7 @@
         <!--banner area end-->
         
         <!--product area start-->
-        <div class="product_area">
+        <!-- <div class="product_area">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -749,11 +749,11 @@
                      
                 </div>
             </div>
-        </div>
+        </div> -->
         <!--product area end-->
 
         <!--blog area start-->
-        <div class="blog_area">
+        <!-- <div class="blog_area">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -877,7 +877,7 @@
                         
                    
             </div>
-        </div>
+        </div> -->
         <!--blog area end-->
     </div>
     <!--home section bg area end-->
