--- a/src/app/giohang/checkout/checkout.component.html
+++ b/src/app/giohang/checkout/checkout.component.html
@@ -57,7 +57,7 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
                         <div class="checkout_form_left">
-                            <form [formGroup]="formdonhang">
+                            <form [formGroup]="formdonhang" (ngSubmit)="themdonhang(formdonhang.value)">
                                 <h3>Thông tin đơn hàng</h3>
                                 <div class="row">
 
@@ -91,7 +91,7 @@
                                     <label for="">Tỉnh/thành</label>
                                             <select formControlName="tinh" id="" class="form-control" (change)="gethuyenbytinh($event.target.value)" >
                                                 
-                                                <option *ngFor="let tinh of tinhs" value="{{tinh.id}}">{{tinh.type}} {{tinh.name}}</option>
+                                                <option *ngFor="let tinh of tinhs" value="{{tinh.id}}">{{tinh.name}}</option>
                                             </select>
                                          <label for="">Quận/huyện</label>
                                          <select formControlName="huyen" id="" class="form-control" (change)="getxabyhuyen($event.target.value)"> 
@@ -201,6 +201,9 @@
                                         </div>    
                                     </div>     	    	    	    	    	    	    
                                 </div>
+                                <div class="order_button">
+                                    <button  type="submit">Đặt Hàng</button> 
+                                </div>
                             </form> 
                         </div>
                     </div>
@@ -265,9 +268,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="order_button">
-                                        <button  type="submit">Proceed to PayPal</button> 
-                                    </div>    
+                                        
                                 </div> 
                             </form> 
                         </div>        
