--- a/src/app/khachhang/dsdonhang/dsdonhang.component.html
+++ b/src/app/khachhang/dsdonhang/dsdonhang.component.html
@@ -1,1 +1,53 @@
-<p>dsdonhang works!</p>
+
+ <!--shop toolbar end-->
+ <!-- <div class="row shop_wrapper">
+    
+    <div class="col-lg-12 col-md-12 col-12 ">
+       
+        <article class="single_product">
+            <figure>
+                <h3 class="product_content_inner">Đơn hàng của tôi  <button class="btn btn-info" style="float:right;">+ Thêm địa chỉ mới</button></h3>
+                
+               
+               <table  class="table">
+                   <tr *ngFor="let t of tk[0].dsdiachi">
+                       <td><label style="float: right;"  for=""> Số điện thoại:</label></td>
+                       <td>
+                           {{t.soDienThoai}}
+                          
+                       </td>
+                       <td><label style="float: right;" for=""> Địa chỉ</label></td>
+                       <td>
+                           <p>{{t.chiTiet}}</p>
+                           
+                            <p>{{t.ttxa.type}} {{t.ttxa.name}}</p>
+                           <p>{{t.tthuyen.type}} {{t.tthuyen.name}} </p>
+                           <p>{{t.tttinh.type}} {{t.tttinh.name}} 
+                           </p>
+                           
+                       </td>
+                       <td>
+                        <button *ngIf="t.main==1" class="btn btn-primary btn-sm" style="cursor: default;background-color: rgb(255, 255, 255);color:black;">Mặc định</button>
+                        <button *ngIf="t.main==1" class="btn btn-primary btn-sm" style="cursor: default;background-color: rgb(24, 153, 34);">Địa chỉ nhận hàng</button>
+                       </td>
+                       <td>
+                           <p><a href=""><u>Sửa</u></a>&nbsp;&nbsp;&nbsp;<a href=""><u> Xóa</u></a></p>
+                           <button *ngIf="t.main!=1" class="btn btn-primary">Thiết lập mặc định</button>
+                           <button *ngIf="t.main==1" class="btn btn-primary" style="cursor: not-allowed;background-color: rgb(224, 224, 224);">Thiết lập mặc định</button>
+                        </td>
+                   </tr>
+               </table>
+            </figure>
+            <figure>
+                áss
+            </figure>
+        </article>
+    </div>
+   
+</div>
+ -->
+
+
+<!--shop toolbar end-->
+<!--shop wrapper end-->
+
